# fuzzyLogicTest

./: CMakeLists.txt  Max_Code.m.txt  main.c  new_temp5.fis  not_at_runtime.m
currentLim/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  currentLim.c  currentLim.h  currentLim_data.c  currentLim_data.h  currentLim_initialize.c  currentLim_initialize.h  currentLim_terminate.c  currentLim_terminate.h  currentLim_types.h  evalfis.c  evalfis.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  tmwtypes.h  trapmf.c  trapmf.h
currentLim/examples/: main.c  main.h
currentLim/interface/: _coder_currentLim_api.c  _coder_currentLim_api.h  _coder_currentLim_info.c  _coder_currentLim_info.h  _coder_currentLim_mex.c  _coder_currentLim_mex.h
